# coursework_6

./: manage.py  pyproject.toml  readme.md
coursework_6/: asgi.py  settings.py  urls.py  wsgi.py
