[tool.poetry]
name = "coursework_6"
version = "0.1.0"
description = ""
authors = ["dfvasia"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
drf-spectacular = "^0.22.1"
djangorestframework-simplejwt = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
